--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,7 +3,7 @@ annotated-types==0.7.0
 anyio==4.11.0
 certifi==2025.11.12
 charset-normalizer==3.4.4
-click==8.3.1
+click
 fastapi==0.121.3
 greenlet==3.2.4
 h11==0.16.0
